# whisper-bar-wlopezob

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  bundle.sh
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: fase2-stop-hook.md  fase3-tts-formatter.md  hook-tts.excalidraw
hooks/: whisper-tts-codex-stop.sh  whisper-tts-stop.sh
portfolio/: index.html
portfolio/css/: styles.css
portfolio/js/: script.js
scripts/: test_ollama_translate.py
specs/001-azure-tts-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-azure-tts-core/checklists/: requirements.md
specs/001-azure-tts-core/contracts/: whisper-tts-cli.md
specs/001-azure-tts-core/docs/: implementacion-y-pruebas.md
src/: azure_transcriber.rs  config.rs  db.rs  defaults.rs  formatter.rs  hotkey.rs  lib.rs  llm.rs  logger.rs  main.rs  recorder.rs  settings_window.rs  transcriber.rs  translator.rs
src/tts/: gemini.rs  mod.rs  provider.rs  say.rs
