[package]
name = "whisper-bar-rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "whisper_bar_rust"
path = "src/lib.rs"

[[bin]]
name = "whisper-bar-rust"
path = "src/main.rs"

[[bin]]
name = "whisper-tts"
path = "src/bin/whisper-tts.rs"

[dependencies]
tray-icon = "0.21.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSButton",
    "NSCell",
    "NSControl",
    "NSGraphics",
    "NSPanel",
    "NSPopUpButton",
    "NSResponder",
    "NSSegmentedControl",
    "NSTextField",
    "NSView",
    "NSWindow",
] }
global-hotkey = "0.7"
winit = "0.30"
cpal = "0.17.3"
hound = "3.5"
arboard = "3"
enigo = "0.6.1"
log = "0.4"
simplelog = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
serde_json = "1"
base64 = "0.22"
